--- a/style.css
+++ b/style.css
@@ -8,47 +8,109 @@ body{
     background-size: cover;
     background-position:center;
     background-attachment: fixed;
+    
     /* opacity: 1.9; */
 }
-.horizontal-list{
+.horizontal-list {
     list-style: none;
     padding-left: 0px;
     margin: 0px;
-    /* padding: 5px; */
+    font-size: 20;
 }
-.horizontal-list li{
+
+.horizontal-list li {
     display: inline-block;
-    margin: 0px,8px,8px,0px;
+    margin: 0px 8px 8px 0px;
+    font-weight: 100;
+    font-size: 0.9rem;
 }
-.horizontal-list li a{
-    color: wheat;
-    text-decoration:none;
-    font-size: 30px;
+
+
+.horizontal-list li a {
+    color: white;
+    text-decoration: none;
+    font-size: 20px;
     transition: color 0.5s ,border-bottom 4s;
-    letter-spacing: 0.1rem;
+    /* letter-spacing: 0.1rem; */
 }
 .horizontal-list li a:hover{
     color: aquamarine;
-    text-decoration: 3px underline;
+    /* text-decoration: 2px underline; */
 }
-.text-center{
+
+.nav-menu li a {
+    transition: color 0.5s, border-bottom 4s;
+}
+
+.nav-menu li a:hover {
+    color: lightgrey;
+    border-bottom: 1px solid black;
+}
+
+.text-center {
     text-align: center;
 }
-#name-social-container{
-    margin-top: 30vh;
+
+/* Name and Social Icons*/
+
+#name-social-container {
+    margin-top: 25vh;
 }
-#my-name{
-    font-size: 4em;
+
+#my-name {
+    font-size: 3rem;
     letter-spacing: 0.1rem;
-    color: wheat;
-    font-weight: 1000;
+    color: white;
+    font-weight: 700;
     margin-bottom: 0.5rem;
 }
-.social-icons li a i{
-    padding-left: 10px;
+
+.social-icons li {
     border-radius: 50%;
-    font-size: 3rem;
 }
-.social-icons li a i:hover{
-    box-shadow:0px,0px,6px,4px,red ;
+
+.social-icons li:hover {
+    box-shadow: 0px 0px 6px 4px rgba(230, 196, 196, 0.3);
+}
+
+.social-icons li a i:hover {
+    box-shadow: 0px 0px 6px 4px rgba(230, 196, 196, 0.3);
+}
+
+.social-icons li a img {
+    width: 1rem;
+    padding: 8px;
+}
+
+#about{
+    height: auto;
+    width: 100%;
+    position: relative;
+}
+#my-image{
+    height: 16rem;
+    width: 18rem;
+    margin: auto;
+    margin-top: -20vh;
+}
+#my-image img{
+    height: 100%;
+    width: 100%;
+    border-radius: 50%;
+    margin: auto;
+
+    
+}
+#my-image img:hover{
+    box-shadow: 0px 0px 6px 4px rgba(14, 37, 100, 0.3);
+}
+#about p{
+    margin-left: 10%;
+    margin-right: 10%;
+    font-family: sans-serif;
+    font-size: 25px;
+    font-weight: 100;
+}
+b{
+    color: blue;
 }
