--- a/style.css
+++ b/style.css
@@ -1,9 +1,11 @@
 body{
     margin: 0px;
+    /* color: black; */
+    background-color: black;
 
 }
 #body-header{
-    height: 65vh;
+    height: 75vh;
     background-image: url(bckg2.jpeg);
     background-size: cover;
     background-position:center;
@@ -32,6 +34,7 @@ body{
     font-size: 20px;
     transition: color 0.5s ,border-bottom 4s;
     /* letter-spacing: 0.1rem; */
+    
 }
 .horizontal-list li a:hover{
     color: aquamarine;
@@ -54,11 +57,11 @@ body{
 /* Name and Social Icons*/
 
 #name-social-container {
-    margin-top: 25vh;
+    margin-top: 20vh;
 }
 
 #my-name {
-    font-size: 3rem;
+    font-size: 4rem;
     letter-spacing: 0.1rem;
     color: white;
     font-weight: 700;
@@ -110,6 +113,7 @@ body{
     font-family: sans-serif;
     font-size: 25px;
     font-weight: 100;
+    color: white;
 }
 b{
     color: blue;
