--- a/style.css
+++ b/style.css
@@ -34,6 +34,7 @@ body{
     font-size: 20px;
     transition: color 0.5s ,border-bottom 4s;
     /* letter-spacing: 0.1rem; */
+    /* justify-content: space-between; */
     
 }
 .horizontal-list li a:hover{
@@ -117,4 +118,35 @@ body{
 }
 b{
     color: blue;
+}
+section{
+    width: 100%;
+    height: 75vh;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+section :nth-child(2n){
+    background-color: rgba(0, 0, 0, 0.822);
+}
+section :nth-child(2n+1){
+    background-color: rgba(0, 0, 0, 0.005);
+}
+.section-heading{
+    width: auto;
+    padding: 20px 10px 10px;
+    font-weight: 400;
+}
+.section-heading span{
+    font-size: 40px ;
+    color: aquamarine;
+    padding-top: 10px;
+    margin-right: 0.5rem;
+}
+.skills-display{
+    width: 70%;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+
 }
