--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@ body::-webkit-scrollbar {
 #body-header {
   height: 65vh;
   opacity: 0.8;
-  background-image: url(https://ninjasfiles.s3.amazonaws.com/asset_0000000000000020_1549743985_macbook_mouse.jpg);
+  background-image: url(XZDsP.jpg);
   background-size: cover;
   background-position: center;
   background-attachment: fixed;
@@ -164,8 +164,8 @@ section:nth-child(2n + 1) {
 }
 
 #my-image {
-  height: 12rem;
-  width: 12rem;
+  height: 16.9rem;
+  width: 19.9rem;
   margin: auto;
   margin-top: -17vh;
 }
